Added html skeleton

--- a/index.html
+++ b/index.html
@@ -8,6 +8,92 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+        <!-- HEADER SECTION -->
+    <header>
+        <h3>En MAsse Inc</h3>
+    </header>
+        <!-- NAVBAR SECTION -->
+    <nav>
+        <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">PROJECTS</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">CONTACT</a></li>
+        </ul>
+    </nav>
+        <!-- HERO SECTION -->
+    <div class="hero-image">
+        <div class="hero-text">
+            <h4>En Masse Inc</h4>
+            <p>A securest community to live in the West of Accra</p>
+            <p>Serene Environment with fresh air from the skies</p>
+        </div>
+    </div>
+        <!-- BUY FROM US -->
+    <div class="purchase">
+        <div class="factor">
+            <h5>Location</h5>
+            <p>The location of our residences are very close to the city center</p>
+        </div>
+        <div class="factor">
+            <h5>Payment</h5>
+            <p>We have very flexible payment terms to suit your specific need.</p>
+        </div>
+        <div class="factor">
+            <h5>Environment</h5>
+            <p>The covering of vegetation makes clean air saturate over all the buildings</p>
+        </div>
+        <div class="factor">
+            <h5>Proximity</h5>
+            <p>Our locations are close to other prestigious estates and it assures economies of scale.</p>
+        </div>
+        <div class="factor">
+            <h5>Utilities</h5>
+            <p>The supply of utilities are constand: Constant flow of water and electricity. 4G Data is a utility here.</p>
+        </div>
+        <div class="factor">
+            <h5>Mobility</h5>
+            <p>The surface of roads are asphalted, and makes driving very effortless.</p>
+        </div>
+    </div>
+
+        <!-- HOUSES FOR SALE SECTION -->
+    <section class="for-sale">
+        <div class="house-image">
+            <img src="">
+            <h5>SEMI DETACHED</h5>
+        </div>
+        <div class="house-image">
+            <img src="">
+            <h5>BUNGALOW</h5>
+        </div>
+        <div class="house-image">
+            <img src="">
+            <h5>FULLY DETACHED</h5>
+        </div>
+        <div class="house-image">
+            <img src="">
+            <h5>APARTMENT</h5>
+        </div>
+        <div class="house-image">
+            <img src="">
+            <h5>PLATINUM</h5>
+        </div>
+    </section>
+
+        <!-- CONTACT US SECTION -->
+    <section class="contact">
+        <h3>CONTACT US BY</h3>
+        <p>+233244001001</p>
+        <p>+233543309904</p>
+        <p>info@enmasseinc.com</p>
+        <p>www.enmasseinc.com</p>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        &copy; 2022 EN MASSE INC &mdash;
+        <a href="/terms-of-use">Terms of Use</a>
+    </footer>
 </body>
 </html>
