--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EnMasseInc</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
         <!-- HEADER SECTION -->
-    <header>
-        <h3>En MAsse Inc</h3>
-    </header>
-        <!-- NAVBAR SECTION -->
-    <nav>
-        <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">PROJECTS</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
-        </ul>
-    </nav>
+   
+        <div class="header">
+            <nav>
+                <img src="/images/Estate.png" alt="">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Offers</a></li>
+                    <li><a href="#">Reviews</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+    <div class="user">
+         <i class="fa fa-search"></i>
+         <i class="fa fa-user"></i>
+    </div>
+            </nav>
+        </div>
         <!-- HERO SECTION -->
     <div class="hero-image">
         <div class="hero-text">
