--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     <!-- HERO SECTION -->
                     <div class="hero-text">
-                        <h4>En Masse Inc</h4>
+                        <h4>En Masse Inc.</h4>
                         <p>A securest community to live in the West of Accra</p>
                         <p>Serene Environment with fresh air from the skies</p>
                     </div>
