--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
                     <!-- HERO SECTION -->
                     <div class="hero-text">
-                        <h4>En Masse Inc.</h4>
-                        <p>A securest community to live in the West of Accra</p>
-                        <p>Serene Environment with fresh air from the skies</p>
+                        <h4><span>En Masse</span> Inc.</h4>
+                        <p>A securest community to live in the West of Accra. 
+                        Serene environment with fresh air from the skies</p>
                     </div>
         </div>
 
