--- a/index.html
+++ b/index.html
@@ -39,28 +39,18 @@
     <div class="purchase">
         <div class="factor">
             <h5>Location</h5>
-            <p>The location of our residences are very close to the city center</p>
+            <p>The location of our residences are very close to the city center. Our locations are close to other prestigious estates and it assures economies of scale. The covering of vegetation makes clean air saturate over all the buildings. The surface of roads are asphalted, and makes driving very effortless.</p>
         </div>
         <div class="factor">
             <h5>Payment</h5>
             <p>We have very flexible payment terms to suit your specific need.</p>
         </div>
-        <div class="factor">
-            <h5>Environment</h5>
-            <p>The covering of vegetation makes clean air saturate over all the buildings</p>
-        </div>
-        <div class="factor">
-            <h5>Proximity</h5>
-            <p>Our locations are close to other prestigious estates and it assures economies of scale.</p>
-        </div>
+       
         <div class="factor">
             <h5>Utilities</h5>
             <p>The supply of utilities are constand: Constant flow of water and electricity. 4G Data is a utility here.</p>
         </div>
-        <div class="factor">
-            <h5>Mobility</h5>
-            <p>The surface of roads are asphalted, and makes driving very effortless.</p>
-        </div>
+      
     </div>
 
         <!-- HOUSES FOR SALE SECTION -->
