--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@
         <!-- BUY FROM US -->
     <div class="purchase">
         <div class="factor">
+            <i class="fa-solid fa-map-location-dot"></i>
             <h5>Location</h5>
             <p>The location of our residences are very close to the city center. Our locations are close to other prestigious estates and it assures economies of scale. The covering of vegetation makes clean air saturate over all the buildings. The surface of roads are asphalted, and makes driving very effortless.</p>
         </div>
         <div class="factor">
+            <i class="fa-solid fa-money-bill-1-wave"></i>
             <h5>Payment</h5>
             <p>We have very flexible payment terms to suit your specific need.</p>
         </div>
        
         <div class="factor">
+            <i class="fa-solid fa-wifi"></i>
             <h5>Utilities</h5>
             <p>The supply of utilities are constand: Constant flow of water and electricity. 4G Data is a utility here.</p>
         </div>
