--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
         <!-- BUY FROM US -->
     <div class="purchase">
+        <h2>OFFERS</h2>
         <div class="factor">
             <i class="fa-solid fa-map-location-dot"></i>
             <h5>Location</h5>
