--- a/index.html
+++ b/index.html
@@ -60,23 +60,28 @@
         <!-- HOUSES FOR SALE SECTION -->
     <section class="for-sale">
         <div class="house-image">
-            <img src="">
+            <div class="estate-img">
+                <img src="">
+            </div>
             <h5>SEMI DETACHED</h5>
         </div>
+       
         <div class="house-image">
-            <img src="">
-            <h5>BUNGALOW</h5>
-        </div>
-        <div class="house-image">
-            <img src="">
+            <div class="estate-img">
+                <img src="">
+            </div>
             <h5>FULLY DETACHED</h5>
         </div>
         <div class="house-image">
+          <div class="estate-img">
             <img src="">
+          </div>
             <h5>APARTMENT</h5>
         </div>
         <div class="house-image">
+           <div class="estate-img">
             <img src="">
+           </div>
             <h5>PLATINUM</h5>
         </div>
     </section>
