--- a/index.html
+++ b/index.html
@@ -61,28 +61,40 @@
     <section class="for-sale">
         <div class="house-image">
             <div class="estate-img">
-                <img src="">
+                <img src="/images/two-bedroom.jpg">
             </div>
+           <div class="fs-content">
             <h5>SEMI DETACHED</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur recusandae nostrum nobis sapiente inventore est aspernatur qui mollitia nam voluptate?</p>
+           </div>
         </div>
        
         <div class="house-image">
             <div class="estate-img">
-                <img src="">
+                <img src="/images/fully-detached.jpg">
             </div>
-            <h5>FULLY DETACHED</h5>
+            <div class="fs-content">
+                <h5>FULLY DETACHED</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur recusandae nostrum nobis sapiente inventore est aspernatur qui mollitia nam voluptate?</p>
+               </div>
         </div>
         <div class="house-image">
           <div class="estate-img">
-            <img src="">
+            <img src="/images/12room.jpg">
           </div>
+          <div class="fs-content">
             <h5>APARTMENT</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur recusandae nostrum nobis sapiente inventore est aspernatur qui mollitia nam voluptate?</p>
+           </div>
         </div>
         <div class="house-image">
            <div class="estate-img">
-            <img src="">
+            <img src="/images/exotic.jpg">
            </div>
+           <div class="fs-content">
             <h5>PLATINUM</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur recusandae nostrum nobis sapiente inventore est aspernatur qui mollitia nam voluptate?</p>
+           </div>
         </div>
     </section>
 
@@ -102,3 +114,5 @@
     </footer>
 </body>
 </html>
+
+
