--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
            <div class="fs-content">
             <h5>SEMI DETACHED</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur recusandae nostrum nobis sapiente inventore est aspernatur qui mollitia nam voluptate?</p>
+            <button>Buy now</button>
            </div>
         </div>
        
@@ -76,6 +77,7 @@
             <div class="fs-content">
                 <h5>FULLY DETACHED</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur recusandae nostrum nobis sapiente inventore est aspernatur qui mollitia nam voluptate?</p>
+                <button>Buy now</button>
                </div>
         </div>
         <div class="house-image">
@@ -85,6 +87,7 @@
           <div class="fs-content">
             <h5>APARTMENT</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur recusandae nostrum nobis sapiente inventore est aspernatur qui mollitia nam voluptate?</p>
+            <button>Buy now</button>
            </div>
         </div>
         <div class="house-image">
@@ -94,6 +97,7 @@
            <div class="fs-content">
             <h5>PLATINUM</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur recusandae nostrum nobis sapiente inventore est aspernatur qui mollitia nam voluptate?</p>
+            <button>Buy now</button>
            </div>
         </div>
     </section>
