--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <img src="/images/Estate.png" alt="">
                 <ul>
                     <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
                     <li><a href="#">Offers</a></li>
-                    <li><a href="#">Reviews</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
     <div class="user">
@@ -37,7 +37,7 @@
 
         <!-- BUY FROM US -->
     <div class="purchase">
-        <h2>OFFERS</h2>
+        <h2>SERVICES</h2>
         <div class="factor">
             <i class="fa-solid fa-map-location-dot"></i>
             <h5>Location</h5>
