--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EnMasseInc</title>
+    <title>En Masse,Inc</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
@@ -59,6 +59,7 @@
 
         <!-- HOUSES FOR SALE SECTION -->
     <section class="for-sale">
+        <h2>OFFERS</h2>
         <div class="house-image">
             <div class="estate-img">
                 <img src="/images/two-bedroom.jpg">
