--- a/index.html
+++ b/index.html
@@ -103,20 +103,17 @@
         </div>
     </section>
 
-        <!-- CONTACT US SECTION -->
-    <section class="contact">
+      <!-- footer section -->
+    <footer>
         <h3>CONTACT US BY</h3>
         <p>+233244001001</p>
         <p>+233543309904</p>
         <p>info@enmasseinc.com</p>
         <p>www.enmasseinc.com</p>
-    </section>
-
-    <!-- FOOTER -->
-    <footer class="footer">
         &copy; 2022 EN MASSE INC &mdash;
-        <a href="/terms-of-use">Terms of Use</a>
+        <a href="#">Terms of Use</a>
     </footer>
+   
 </body>
 </html>
 
