corrected image not appearing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    
         <div class="header">
             <nav>
-                <img src="/images/Estate.png" alt="">
+                <img src="./images/Estate.png" alt="">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Services</a></li>
@@ -62,7 +62,7 @@
         <h2>OFFERS</h2>
         <div class="house-image">
             <div class="estate-img">
-                <img src="/images/two-bedroom.jpg">
+                <img src="./images/two-bedroom.jpg">
             </div>
            <div class="fs-content">
             <h5>SEMI DETACHED</h5>
@@ -73,7 +73,7 @@
        
         <div class="house-image">
             <div class="estate-img">
-                <img src="/images/fully-detached.jpg">
+                <img src="./images/fully-detached.jpg">
             </div>
             <div class="fs-content">
                 <h5>FULLY DETACHED</h5>
@@ -83,7 +83,7 @@
         </div>
         <div class="house-image">
           <div class="estate-img">
-            <img src="/images/12room.jpg">
+            <img src="./images/12room.jpg">
           </div>
           <div class="fs-content">
             <h5>APARTMENT</h5>
@@ -93,7 +93,7 @@
         </div>
         <div class="house-image">
            <div class="estate-img">
-            <img src="/images/exotic.jpg">
+            <img src="./images/exotic.jpg">
            </div>
            <div class="fs-content">
             <h5>PLATINUM</h5>
