--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>En Masse,Inc</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body>
         <!-- HEADER SECTION -->
@@ -24,7 +25,7 @@
          <i class="fa fa-search"></i>
          <i class="fa fa-user"></i>
     </div>
-            </nav>
+            
 
 
                     <!-- HERO SECTION -->
